<resources>
    <string name="app_name">家庭云</string>
    <string name="app_folder">应用文件夹</string>
    <string name="login">登录</string>
    <string name="login_please_wait">正在登陆…</string>
    <string name="loading_please_wait">正在加载…</string>
    <string name="no_task">没有选择剧集</string>
    <string name="add_task_please_wait">正在添加下载任务…</string>
    <string name="register">注册</string>
    <string name="please_read_and_agree_agreement">请阅读并同意用户协议</string>
    <string name="register_please_wait">正在注册…</string>
    <string name="download_speed_set_please_wait">设置中…</string>
    <string name="login_tip">已经有注册过的账号请直接登录</string>
    <string name="register_tip">还未有账号请先注册账号</string>
    <string name="forget_secret">忘记密码?</string>
    <string name="error_secret">密码错误</string>
    <string name="account">账号</string>
    <string name="account_id">账号：</string>
    <string name="secret">密码</string>
    <string name="unbind">解绑</string>
    <string name="unbind_please_wait">正在解绑…</string>
    <string name="network_not_available">网络异常</string>
    <string name="server_not_available">连不上服务器</string>
    <string name="please_input_cur_devname">请输入新设备名</string>
    <string name="contains_illegal_characters">您输入的内容含有非法字符</string>
    <string name="please_not_loanger_than_32">请不要超过32字节</string>
    <string name="please_not_loanger_than_30_char">请不要超过30个字节</string>
    <string name="please_input_cur_pwd">请输入当前账号密码</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_keyword">请输关键字</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_oldpwd">请输入旧密码</string>
    <string name="please_input_newpwd">请输入新密码</string>
    <string name="account_format_error">用户名格式错误</string>
    <string name="pwd_format_error">密码格式错误</string>
    <string name="pwd_notsame_error">两次密码输入不一致</string>
    <string name="fill_email">填写邮箱</string>
    <string name="email_exist">邮箱已被使用（用户已注册）</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="commit_email">提交</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_pwd_please_wait">正在找回密码…</string>
    <string name="mod_pwd">修改密码</string>
    <string name="connecting_please_wait">正在连接…</string>
    <string name="input_new1_pwd">输入新密码</string>
    <string name="input_new2_pwd">确认密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="input_key_word">请输入关键字</string>
    <string name="next_step">下一步</string>
    <string name="pwd_mod_success">密码修改成功</string>
    <string name="pwd_mod_end">完成</string>
    <string name="input_secret">输入6-16位密码</string>
    <string name="confirm_secret">确认密码</string>
    <string name="wrong_secret">密码错误</string>
    <string name="activate_now">马上激活</string>
    <string name="goto_activate">请登录您的邮箱完成激活</string>
    <string name="register_success">注册成功</string>
    <string name="register_agreement_tip">我阅读并同意</string>
    <string name="register_agreement">《家庭云用户使用协议》</string>
    <string name="about">关于</string>
    <string name="version_mycloud">版本号　：家庭云V1.0</string>
    <string name="email_customer_service">客服邮箱：lvxw@gvtv.com.cn</string>
    <string name="micro_blog_service">微博服务：family_cloud</string>
    <string name="offical_website">官方网址：www.gvtv.com.cn</string>
    <string name="offical_phone">服务热线：0755-8207797</string>
    <string name="copyright">版权所有：@2014-2024深圳好视网络科技有限公司\nShenZhen GreatVision Network Technology Co.,Ltd.</string>
    <string name="app_store">应用商城</string>
    <string name="app_version">版本号：</string>
    <string name="app_developer">开发者：</string>
    <string name="app_summary">应用简介</string>
    <string name="app_detail">应用详情</string>
    <string name="app_install">安装</string>
    <string name="app_upgrade">更新</string>
    <string name="app_open">打开</string>
    <string name="app_uninstall">卸载</string>
    <string name="uninstall_app">卸载应用</string>
    <string name="app_canel_install">取消</string>
    <string name="click_to_loadmore">点击获取更多…</string>
    <string name="download_manager">下载管理</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">已完成</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="pause">暂停</string>
    <string name="waiting">等待下载…</string>
    <string name="fail_no_source">无资源</string>
    <string name="go_on">继续</string>
    <string name="delete">删除</string>
    <string name="delete_fail">删除失败</string>
    <string name="add_fail">添加下载任务失败</string>
    <string name="add_success">添加下载成功</string>
    <string name="delete_file">删除文件</string>
    <string name="reserve_file">保留文件</string>
    <string name="cancel">取消</string>
    <string name="modname">修改</string>
    <string name="file_manager">文件管理</string>
    <string name="no_file_selected">未选中文件</string>
    <string name="down_file">下载文件</string>
    <string name="backup_file">备份文件</string>
    <string name="upload_file">上传文件</string>
    <string name="backup">备份</string>
    <string name="restore_null">没有可恢复的文件</string>
    <string name="restore">恢复</string>
    <string name="last_backup_time">最近备份时间：</string>
    <string name="backup_filename">文件名：</string>
    <string name="speed_limite_tip">限速</string>
    <string name="upload_speed_tip">上传限速：最大上传速度是50KB/S</string>
    <string name="speedset_success_tip">设置成功</string>
    <string name="download_speed_tip">下载限速：最大下载速度是900KB/S</string>
    <string name="backup_contact_tv_1">将手机通信录和短信备份至家庭云</string>
    <string name="backup_contact_tv_2">将家庭云通信录和短信恢复至手机</string>
    <string name="share_file">分享文件</string>
    <string name="exit">退出</string>
    <string name="bind_device">绑定设备</string>
    <string name="bind_success">绑定成功</string>
    <string name="binding_please_wait">正在绑定…</string>
    <string name="cannot_use_device">不绑定设备无法正常使用</string>
    <string name="account_display">账号：</string>
    <string name="unfind_device">未搜索到设备</string>
    <string name="has_binded">已绑定</string>
    <string name="not_binded">未绑定</string>
    <string name="bind">绑定</string>
    <string name="no_data">无数据</string>
    <string name="no_app">没有搜索到应用</string>
    <string name="no_file">下拉刷新…</string>
    <string name="restore_setting">保存设置</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_again">重新搜索</string>
    <string name="searching_device">搜索中…</string>
    <string name="search_no_result">未找到您想要的文件</string>
    <string name="download_retry">重新下载</string>
    <string name="user_info">个人信息</string>
    <string name="modify_secret">修改密码</string>
    <string name="exit_account">退出账号</string>
    <string name="account_link">账号：</string>
    <string name="binded_device_link">已绑定设备：</string>
    <string name="device_control_state">设备控制与状态</string>
    <string name="all_size">总空间：</string>
    <string name="used_size">已用空间：</string>
    <string name="available_size">可用空间：</string>
    <string name="device_control">设备控制</string>
    <string name="download_setting">下载设置</string>
    <string name="cloud_device">家庭云设备</string>
    <string name="device_space">设备空间</string>
    <string name="mobile_setting">移动设备端设置</string>
    <string name="message_remind">消息提醒</string>
    <string name="contacts_allow">允许访问手机通讯录</string>
    <string name="please_contacts_allow">请允许应用访问手机通讯录</string>
    <string name="please_sms_allow">请允许应用访问手机短信</string>
    <string name="account_manager">账号管理</string>
    <string name="solid_update">固件更新</string>
    <string name="restart_device">重启设备</string>
    <string name="restartting_device_tip">正在重启…</string>
    <string name="recovery">恢复出厂 </string>
    <string name="recover">恢复 </string>
    <string name="exit_account_tip">退出账号后不会对已绑定的设备造成影响</string>
    <string name="device_bind">设备绑定</string>
    <string name="device_name_link">设备名称：</string>
    <string name="please_input_device_name">请输入设备名称</string>
    <string name="device_state_binded">设备状态：已绑定</string>
    <string name="device_state_unbinded">设备状态：未绑定</string>
    <string name="modify_device_name">修改设备名称</string>
    <string name="modify_device_name_please_wait">正在修改设备名称…</string>
    <string name="unbind_device">解除设备绑定</string>
    <string name="unbind_tip">解除绑定后将无法正常使用相关服务</string>
    <string name="device_name_tip">可以修改家庭云设备名称，让您的设备更容易识别。</string>
    <string name="restart_tip">重启过程中会有一段时间设备不能使用，重启完毕后系统会通知您，在这段时间内，您可以去浏览一下我们的商城。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="system_error">系统错误</string>
    <string name="parameter_wrong">参数有误（格式，长度，取值范围）</string>
    <string name="no_access">无权限访问(ip 跟业务线不匹配)</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="account_or_password_error">账号或密码错误</string>
    <string name="account_disable">账号已停用</string>
    <string name="old_password_error">旧密码错误</string>
    <string name="invalid_business">无效的业务线(不存在，不合法)</string>
    <string name="invalid_friend">无效的好友 (不存在，不合法)</string>
    <string name="modified_account_not_match_check_code">修改的账号和效验码不匹配</string>
    <string name="change_password_time_expired">修改密码时间已过期</string>
    <string name="password_modified">密码已经修改过</string>
    <string name="activated_failed">激活失败</string>
    <string name="activated_time_expired">激活期已过</string>
    <string name="activated">已经激活过</string>
    <string name="no_reponse">用户中心前台无响应</string>
    <string name="friend_exist">好友已存在</string>
    <string name="friendship_not_exist">好友关系不存在</string>
    <string name="account_binded">账户已绑定</string>
    <string name="invalid_code">无效的设备code</string>
    <string name="device_exist">设备已存在</string>
    <string name="user_exist_not_activated">用户已存在但未激活</string>
    <string name="rsa_error">rsa 解密会话密钥错误</string>
    <string name="no_sessionkey">没有协商会话密钥</string>
    <string name="time_out">请求超时</string>
    <string name="device_login_failed">设备登录失败</string>
    <string name="other_end_offline">另一端不在线</string>
    <string name="other_end_send_failed">另一端发送失败</string>
    <string name="no_access_to_device_udp_port">获取不到设备 udp 端口</string>
    <string name="no_access_to_control_udp_port">获取不到控制端 udp 端口</string>
    <string name="other_controler_login">被迫下线</string>
    <string name="device_authentication_expiring">设备快到期</string>
    <string name="device_renewal_expire">设备续费到期</string>
    <string name="device_outofservice">设备已停用</string>
    <string name="pause_download_failed_unknown_cause">暂停失败</string>
    <string name="resume_download_failed_no_task">继续下载失败</string>
    <string name="remove_download_failed">删除下载任务失败，channel_delete()函数返回不为 0</string>
    <string name="del_resfile_failed">删除资源失败</string>
    <string name="device_auth_failed">设备鉴权失败</string>
    <string name="pause_download_failed_no_task">暂停下载任务失败,没有查找到相应任务</string>
    <string name="restore_sms">恢复短信</string>
    <string name="restore_contact">恢复通信录</string>
    <string name="restore_end">恢复完成</string>
    <string name="backup_sms">备份短信</string>
    <string name="backup_contact">备份通信录…</string>
    <string name="backup_end">备份结束</string>
    <string name="backup_contact_end">通信录备份结束</string>
    <string name="backup_please_wait">备份中…</string>
    <string name="restore_please_wait">恢复中…</string>
    <string name="start_backup_sms">备份短信</string>
    <string name="find_pwd_tip3">如果没有收到邮件请点击</string>
    <string name="find_pwd_tip1">密码申请已提交</string>
    <string name="find_pwd_tip2">请到您的注册邮箱重置新密码</string>
    <string name="find_pwd_tip4">重新发送</string>
    <string name="no_backup_file">沒有可恢复的文件</string>
</resources>