<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mycloud="http://schemas.android.com/apk/res/com.gvtv.android.cloud"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.gvtv.android.cloud.view.TitleView
        android:id="@+id/registerTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        mycloud:right_visibility="false"
        mycloud:title="@string/user_info" >
    </com.gvtv.android.cloud.view.TitleView>

    <ImageView
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/icon_04index_account"  />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/account_link"
        android:textColor="@color/email_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/bind_device_text"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/binded_device_link"
        android:textColor="@color/tip_color"
        android:textSize="12sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="28dp"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/modifyBtn"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/login_btn_selector"
        android:text="@string/modify_secret"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/bind_btn_selector"
        android:text="@string/exit_account"
        android:textColor="@color/white" 
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/exit_account_tip"
        android:textColor="@color/tip_color"
        android:textSize="12sp" />

</LinearLayout>